[metadata]
name = iap
version = attr: iap.__version__
url = https://github.com/Lamply
description = image-annotation pair dataset tools
long_description = file: README.md
license = MIT License

[options]
packages = find:
install_requires =
    numpy
    opencv-python
    scikit-image
    yacs
    termcolor
zip_safe = False
include_package_data = True

[options.package_data]
* = README.md
